# KnurDash

./: .gitignore  CMakeLists.txt  KnurDash.css  KnurDash.ui  LICENSE  README.md  appData.c  bluetoothWorker.c  brightness.c  canBusProps.c  canBusWorker.c  dataContracts.h  helpers.c  main.c  sensorConversions.c  sensorProps.c  sensorWorker.c  sensors.c  systemWorker.c  ui.c  workerData.c
KiCAD/KnurCAN_V2/: KnurCAN_V2.kicad_pcb  KnurCAN_V2.kicad_prl  KnurCAN_V2.kicad_pro  KnurCAN_V2.kicad_sch  KnurCAN_V2.kicad_sch-bak  fp-info-cache
KiCAD/KnurCAN_V2/Gerber/: KnurCAN_V2-B_Cu.gbr  KnurCAN_V2-B_Mask.gbr  KnurCAN_V2-B_Paste.gbr  KnurCAN_V2-B_Silkscreen.gbr  KnurCAN_V2-Edge_Cuts.gbr  KnurCAN_V2-F_Cu.gbr  KnurCAN_V2-F_Mask.gbr  KnurCAN_V2-F_Paste.gbr  KnurCAN_V2-F_Silkscreen.gbr  KnurCAN_V2-NPTH-drl_map.ps  KnurCAN_V2-NPTH.drl  KnurCAN_V2-PTH-drl_map.ps  KnurCAN_V2-PTH.drl
KiCAD/Longan_I2C_CAN/: Longan_I2C_CAN.dxf  Longan_I2C_CAN.kicad_mod  Longan_I2C_Can.step
LTSpice/: ADCRefCircuit.asc  Buzzer.asc  CommonGroundSensorCables.asc  IGN signal in.asc  PowerOn.asc  PowerOn_V2.asc  PowerOn_V2.plt  TransPump.asc  canON_V2.asc
boot/: config.txt  knurdash.service
design/: Mazda_MX5_ND_BY_TDO.dbc  Mazda_MX5_ND_BY_TDO.gdf  ND MX-5 CAN Decoding.xlsx  SensorUnit_2023-03-23.skp  SensorUnit_2023-05-28.xlsx
